--- a/app/src/main/res/layout/fragment_about.xml
+++ b/app/src/main/res/layout/fragment_about.xml
@@ -1,26 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:context=".About">
 
-    <TextView
-        android:layout_width="match_parent"
+<TextView
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_centerVertical="true"
+    android:text="This is the About menu!" />
+
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_alignParentBottom="true"
+    android:gravity="center">
+
+    <Button
+        android:id="@+id/btnCancel"
         android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
-        android:text="This is the About menu!" />
+        android:layout_width="wrap_content"
+        android:text="cancel" />
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:gravity="center">
-
-        <Button
-            android:id="@+id/btnCancel"
-            android:layout_height="wrap_content"
-            android:layout_width="wrap_content"
-            android:text="cancel" />
-
-    </LinearLayout>
+</LinearLayout>
 
 </RelativeLayout>
