--- a/app/src/main/res/layout/fragment_add_expenses.xml
+++ b/app/src/main/res/layout/fragment_add_expenses.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView
-    android:layout_width="match_parent"
+<ScrollView android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
     android:fillViewport="true"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:windowSoftInputMode="adjustResize|stateAlwaysVisible">
+    android:windowSoftInputMode="adjustResize|stateAlwaysVisible"
+    tools:context=".AddExpenses">
 
     <LinearLayout
         android:layout_width="match_parent"
