--- a/app/src/main/res/layout/fragment_add_salary.xml
+++ b/app/src/main/res/layout/fragment_add_salary.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:gravity="center"
-    tools:context=".oldApp.AddSalary">
+    tools:context=".AddSalary">
 
     <TextView
         android:layout_width="match_parent"
