--- a/app/src/main/res/layout/activity_second.xml
+++ b/app/src/main/res/layout/activity_second.xml
@@ -6,16 +6,13 @@
     android:layout_height="match_parent"
     tools:context=".SecondActivity">
 
-    <TextView
-        android:layout_width="300dp"
-        android:layout_height="50dp"
-        android:text="LOGGED IN!!!"
-        android:textSize="30dp"
-        android:gravity="center"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        ></TextView>
+    <!-- activity_second.xml -->
+    <FrameLayout
+        android:id="@+id/menuFragment"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
