--- a/app/src/main/res/layout/fragment_add_expenses.xml
+++ b/app/src/main/res/layout/fragment_add_expenses.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/fragmenAddExpenses"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".AddExpenses">
@@ -9,7 +10,7 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:textSize="50dp"
-        android:text="@string/hello_blank_fragment" />
+        android:text="@string/hello_blank_fragment"
+        android:textSize="50dp" />
 
 </FrameLayout>
