--- a/app/src/main/res/layout/fragment_menu.xml
+++ b/app/src/main/res/layout/fragment_menu.xml
@@ -7,11 +7,27 @@
     android:layout_height="match_parent"
     tools:context=".MenuFragment">
 
-    <Button
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:gravity="center"
+        android:orientation="vertical">
+
+        <Button
         android:id="@+id/btnAddExpenses"
         android:layout_width="256dp"
         android:layout_height="wrap_content"
-        android:text="add new Expense"
+        android:text="add new Expenses"
         android:onClick="navigateToAddExpensesFragment" />
+
+        <Button
+            android:id="@+id/btnShowExpenses"
+            android:layout_width="256dp"
+            android:layout_height="wrap_content"
+            android:text="Show Expenses"
+            android:onClick="navigateToShowExpensesFragment" />
+
+    </LinearLayout>
 
 </FrameLayout>
