--- a/app/src/main/res/layout/fragment_show_expenses.xml
+++ b/app/src/main/res/layout/fragment_show_expenses.xml
@@ -14,9 +14,10 @@
         android:divider="@color/gray"
         android:dividerHeight="1dp"
         android:padding="3dip"
-        android:stretchColumns="1">
+        android:stretchColumns="*">
 
-        <TableRow>
+        <TableRow
+            android:background="@drawable/table_row_border">
 
             <TextView
                 android:background="@color/gray"
