--- a/app/src/main/res/layout/fragment_add_new_salary.xml
+++ b/app/src/main/res/layout/fragment_add_new_salary.xml
@@ -19,10 +19,10 @@
             android:layout_height="wrap_content"
             android:layout_width="wrap_content"
             android:textSize="25dp"
-            android:text="Where" />
+            android:text="Employer" />
 
         <EditText
-            android:id="@+id/inWhere"
+            android:id="@+id/inEmployer"
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:inputType="text" />
@@ -34,37 +34,10 @@
             android:text="Category" />
 
         <EditText
-            android:id="@+id/inCategory"
+            android:id="@+id/inSalaryCategory"
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:spinnerMode="dropdown" />
-
-        <TextView
-            android:layout_height="wrap_content"
-            android:layout_width="wrap_content"
-            android:textSize="25dp"
-            android:text="Essentials" />
-
-        <RadioGroup
-            android:id="@+id/radioGroupOptions"
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:orientation="horizontal"
-            android:gravity="center">
-
-            <RadioButton
-                android:id="@+id/radioButtonYes"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Yes" />
-
-            <RadioButton
-                android:id="@+id/radioButtonNo"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="No" />
-
-        </RadioGroup>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -72,7 +45,7 @@
             android:gravity="center">
 
             <DatePicker
-                android:id="@+id/inDate"
+                android:id="@+id/inSalaryDate"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textAlignment="center"
@@ -84,10 +57,10 @@
             android:layout_height="wrap_content"
             android:layout_width="wrap_content"
             android:textSize="25dp"
-            android:text="Price" />
+            android:text="Amount" />
 
         <EditText
-            android:id="@+id/inPrice"
+            android:id="@+id/inSalaryAmount"
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:inputType="numberDecimal" />
@@ -103,10 +76,10 @@
         android:gravity="center">
 
         <Button
-            android:id="@+id/btnAddNewExpense"
+            android:id="@+id/btnAddNewSalary"
             android:layout_width="150dp"
             android:layout_height="50dp"
-            android:text="Add New Expense"
+            android:text="Add New Salary"
             android:layout_gravity="center"/>
 
         <Button
